Added a few end points.
